; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/php/webapps/extr_24289.c_header.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/php/webapps/extr_24289.c_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [388 x i8] c"GET %s%s=%s HTTP/1.1\0D\0AHost: %s\0D\0AUser-Agent: Mozilla/5.0 (X11; U; Linux i666; en-US; rv:1.7.5) Gecko/20050304 Firefox/1.0\0D\0AAccept: text/xml,application/xml,application/xhtml+xml,text/html;q=0.9,text/plain;q=0.8,image/png,*/*;q=0.5\0D\0AAccept-Language: en-us,en;q=0.5\0D\0AAccept-Encoding: gzip,deflate\0D\0AAccept-Charset: ISO-8859-1,utf-8;q=0.7,*;q=0.7\0D\0AKeep-Alive: 300\0D\0AConnection: keep-alive\0D\0A\0D\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @header(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca [8192 x i8], align 16
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = getelementptr inbounds [8192 x i8], [8192 x i8]* %9, i64 0, i64 0
  %11 = load i8*, i8** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = call i32 @sprintf(i8* %10, i8* getelementptr inbounds ([388 x i8], [388 x i8]* @.str, i64 0, i64 0), i8* %11, i8* %12, i8* %13, i8* %14)
  %16 = getelementptr inbounds [8192 x i8], [8192 x i8]* %9, i64 0, i64 0
  ret i8* %16
}

declare dso_local i32 @sprintf(i8*, i8*, i8*, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
